[project]
name = "inference"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eduardo Rubim", email = "eduardo@rubim.digital" }
]
requires-python = ">=3.12"
dependencies = ["server", "cli"]

[project.scripts]
cli = "cli.main:main"
server = "server.main:main"

[tool.uv.sources]
server = { workspace = true }
cli = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false
