[project]
name = "inference"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eduardo Rubim", email = "eduardo@rubim.digital" }
]
requires-python = ">=3.12"
dependencies = ["server", "cli", "domain"]

[project.scripts]
cli = "cli.main:main"
server = "server.main:main"

[tool.uv.sources]
server = { workspace = true }
cli = { workspace = true }
domain = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/cli/tests",
    "packages/server/tests",
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "packages/cli/src",
    "packages/server/src",
    "packages/domain/src",
]
